fixed layout bugs

--- a/env/static/main.css
+++ b/env/static/main.css
@@ -108,8 +108,6 @@ PAGE: PORTFOLIO
 #gallery {
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
 }
 
 #gallery div{
